added easy-motion plutin

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "bundle/better-snipmate-snippets"]
 	path = bundle/better-snipmate-snippets
 	url = git://github.com/bartekd/better-snipmate-snippets.git
+[submodule "vim-easymotion"]
+	path = vim-easymotion
+	url = git://github.com/Lokaltog/vim-easymotion.git
