--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "bundle/supertab"]
     path = bundle/supertab
     url = git://github.com/ervandew/supertab.git
+[submodule "bundle/js-lib-syntax.vim"]
+	path = bundle/js-lib-syntax.vim
+	url = https://github.com/othree/javascript-libraries-syntax.vim.git
