--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "bundle/powerline"]
 	path = bundle/powerline
-	url = git://github.com/Lokaltog/vim-powerline.git
+	url = https://github.com/Lokaltog/powerline.git
 #    url = git://github.com/Lokaltog/powerline.git
 [submodule "bundle/indent-guides"]
 	path = bundle/indent-guides
